--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
 
 * {
   box-sizing: border-box;
+  -moz-box-sizing: border-box;
   margin: 0;
   padding: 0;
 }
@@ -40,18 +41,24 @@ p {
   font-size: 2vw;
 }
 
+.upper-heading > sup{
+  font-size: 0.8rem;
+}
+
+sup{
+  font-size: 1rem;
+}
+
 .main-heading {
   font-size: 4.5vw;
-  /* font-stretch: expanded; */
   font-family: 'Roboto';
 }
 
 hr {
   background-color: white;
-  border-radius: 2px;
-  border: 1.5px solid white;
+  border-radius: 0.1rem;
+  border: 0.1rem solid white;
   margin: 0.5rem 0 0.5rem 0;
-
 }
 
 .sub-heading {
@@ -68,10 +75,16 @@ hr {
 
 .upper-text {
   font-size: 1.2rem;
+  line-height: 1.5rem;
+}
+
+.upper-text > sup{
+  font-size: 0.5rem;
 }
 
 .bottom-text {
   font-size: 1.1rem;
+  line-height: 1.5rem;
 }
 
 .form-container {
@@ -93,7 +106,7 @@ hr {
   text-decoration: none;
 }
 
-.form {
+.form-box {
   align-items: center;
   display: flex;
   flex-direction: column;
@@ -102,31 +115,51 @@ hr {
   width: 40rem;
 }
 
+.form {
+  width: 60%;
+}
+
 .form-heading {
   font-size: 2.5rem;
   font-weight: 400;
-  margin-bottom: 4%;
+  margin-bottom: 2rem;
+}
+
+.password-block {
+  display: flex;
+  position: relative;
+  width: 100%;
 }
 
 .input {
   background-color: rgb(242, 242, 242);
-  border: 0px;
-  border-bottom: 2px solid rgb(149, 149, 149);
+  border: 0;
+  border-bottom: 0.1rem solid rgb(149, 149, 149);
   font-size: 1rem;
-  height: 3rem;
+  height: 3.5rem;
   margin: 0.5rem 0 0.5rem 0;
   outline: none;
+  padding: 0 2rem 0 1rem;
   width: 100%;
 }
 
-.input::placeholder {
-  padding-left: 1rem;
+
+.material-symbols-outlined {
+  cursor: pointer;
+  margin-left: -3rem;
+  align-self: center;
+  color: rgb(100, 99, 99);
+  font-variation-settings:
+  'FILL' 1,
+  'wght' 400,
+  'GRAD' 0,
+  'opsz' 48
 }
 
 .forgot-pass {
   color: #6d44d4;
   display: block;
-  font-size: small;
+  font-size: 0.9rem;
   font-weight: bold;
   margin-bottom: 1.5rem;
   padding: 0.5rem;
@@ -139,11 +172,12 @@ hr {
   background-color: rgb(227, 227, 227);
   color: rgb(153, 153, 153);
   display: block;
+  font-size: 1rem;
   font-weight: bold;
-  height: 2rem;
+  height: 2.5rem;
   margin-top: 1rem;
   margin: auto;
-  border-radius: 2px;
+  border-radius: 0.2rem;
   width: 10rem;
 }
 
@@ -160,7 +194,7 @@ hr {
   margin-top: auto;
 }
 
-.small-form {
+.small-form-box {
   display: none;
 }
 
@@ -169,8 +203,11 @@ hr {
 }
 
 @media screen and (max-width: 1000px) {
+  
+
   .info-container {
     width: 100%;
+    height: 100%;
   }
 
   .form-container {
@@ -216,20 +253,21 @@ hr {
     font-size: 1rem;
   }
 
-  .small-form {
-    align-items: flex-start;
+  .small-form-box {
+    align-items: center;
     align-self: center;
     background-color: white;
     border-radius: 10px;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     margin-bottom: 1rem;
+    padding: 1.5rem 1rem 0 1rem;
     width: 20rem;
   }
 
-  .form {
-    margin-top: 10%;
-    width: 90%;
+  .small-form {
+    width: 100%;
   }
 
   .new-member-link {
